Test/git-issues/git-issue-859a.dfy.expect
git-issue-859a.dfy(28,4): Error: Assignment to non-ghost variable is not allowed in this context (because this is a ghost method or because the statement is guarded by a specification-only expression)
git-issue-859a.dfy(28,4): Error: return statement is not allowed in this context (because it is guarded by a specification-only expression)
git-issue-859a.dfy(28,4): Error: actual out-parameter is required to be a ghost variable
git-issue-859a.dfy(33,4): Error: actual out-parameter is required to be a ghost variable
git-issue-859a.dfy(44,9): Error: Assignment to non-ghost variable is not allowed in this context (because this is a ghost method or because the statement is guarded by a specification-only expression)
git-issue-859a.dfy(44,9): Error: return statement is not allowed in this context (because it is guarded by a specification-only expression)
git-issue-859a.dfy(50,8): Error: ghost variables are allowed only in specification contexts
7 resolution/type errors detected in git-issue-859a.dfy
